# cpp-template

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .produce-ci-metrics.py  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Dockerfile  Dockerfile-lint  HelloWorldConfig.h.in  LICENSE  Makefile  README.md  conanfile.txt  dependencies.txt  profile-clang.txt
cmake/: cpplint.cmake
cmake_modules/: gtest-install.cmake  gtest.cmake
docs/: Doxyfile  requirements.txt
docs/src/: conf.py  index.rst
docs/src/api/: library_root.rst
include/top-namespace/nested-namespace/: hello.h  wave.h
include/top/nested/: CMakeLists.txt  hello.h  wave.h
modules/: ReadMe.txt
modules/cppcoro/: CMakeLists.txt
modules/cppcoro/src/: cppcoro.cppm
modules/cuda/: CMakeLists.txt
modules/cuda/src/: cuda.cppm
modules/eigen/: CMakeLists.txt
modules/eigen/src/: eigen.cppm  eigen.dense.cppm  eigen.geometry.cppm  eigen.lu.cppm  eigen.qr.cppm  eigen.sparse.cppm  eigen.svd.cppm  eigen.tensor.cppm
modules/fmt/: CMakeLists.txt
modules/fmt/src/: fmt-core.cppm
modules/range-v3/: CMakeLists.txt
modules/range-v3/src/: range_v3.algorithm.cppm  range_v3.cppm  range_v3.generator.cppm  range_v3.range.cppm  range_v3.views.cppm
modules/stdcxx/: CMakeLists.txt
modules/stdcxx/src/: std-algorithm.cppm  std-array.cppm  std-atomic.cppm  std-cctype.cppm  std-cfenv.cppm  std-chrono.cppm  std-cinttypes.cppm  std-clocale.cppm  std-cmath.cppm  std-concepts.cppm  std-condition_variable.cppm  std-coroutine.cppm  std-csetjmp.cppm  std-csignal.cppm  std-cstdarg.cppm  std-cstddef.cppm  std-cstdint.cppm  std-cstdio.cppm  std-cstdlib.cppm  std-cstring.cppm  std-ctime.cppm  std-cuchar.cppm  std-cwchar.cppm  std-cwctype.cppm  std-exception.cppm  std-fstream.cppm  std-functional.cppm  std-initializer_list.cppm  std-iostream.cppm  std-iterator.cppm  std-limits.cppm  std-list.cppm  std-map.cppm  std-memory.cppm  std-mutex.cppm  std-numbers.cppm  std-numeric.cppm  std-optional.cppm  std-queue.cppm  std-random.cppm  (+15 more)
modules/ut/: CMakeLists.txt
modules/ut/src/: ut.cppm
modules/ut/src/boost/: ut.hpp
ska-cpp-template/foobar/: CMakeLists.txt
ska-cpp-template/foobar/src/: bar.cxx  cuda_hello.cu  cuda_hello.cxx  cuda_hello.h  cycle.cxx  cycleA.cxx  cycleB.cxx  fibonacci.cxx  foo.cxx
ska-cpp-template/foobar/tests/: CMakeLists.txt  main.cxx  test_bar.cxx  test_bdd.cxx  test_coro.cxx  test_cuda.cxx  test_cycle.cxx  test_eigen.cxx  test_fibonacci.cxx  test_foo.cxx  test_headers.cxx
ska-cpp-template/helloworld/: CMakeLists.txt
ska-cpp-template/helloworld/src/: main.cxx
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  hello_world.cc
src/ska/helloworld/: CMakeLists.txt
src/ska/nested/: CMakeLists.txt  hello.cc  hello.h  wave.cc  wave.h  wave_impl.h
src/ska/nested/tests/: twave.cc
src/top-namespace/nested-namespace/: hello.cc  wave.cc
src/top/nested/: CMakeLists.txt  call.cc  call.h  call_impl.h  hello.cc  wave.cc  wave.h  wave_impl.h
src/top/nested/tests/: CMakeLists.txt  tcall.cc  twave.cc
tests/top-namespace/nested-namespace/: thello.cc
tests/top/nested/: CMakeLists.txt  thello.cc
